      Ilia Kats.

      \item \code{seq.int()} did not adequately check its
      \code{length.out} argument.

      \item \code{match(<POSIXct>, .)} is correct again for differing time
      zones, ditto for \code{"POSIXlt"}, fixing \PR{18618} reported by
      Bastian Klein.

      \item \code{drop.terms(*, dropx=<0-length>)} now works, fixing
      \PR{18563} as proposed by Mikael Jagan.

      \item \code{getS3method("t", "test")} no longer finds the
      \code{t.test()} function, fixing \PR{18627}.

      \item \code{pdf()} and \code{postscript()} support for the documented
      Adobe encodings \code{"Greek"} and \code{"Cyrilllic"} was missing
      (although the corresponding Windows' codepages could be used).
      (And also for the legacy \code{"MacRoman"} encoding.) 

      \item Computations of glyph metric informaation for \code{pdf()}
      and \code{postscript()} did not take into account that
      transliteration could replace one character by two or more (only
      seen on macOS 14) and typically warned that the information was
      not known.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.3.2}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The default initialization of the \code{"repos"} option
      from the \file{repositories} file at startup can be skipped by
      setting environment variable \env{R_REPOSITORIES} to \code{NULL}
      such that \code{getOption("repos")} is empty if not set elsewhere.

      \item \code{qr.X()} is now an implicit S4 generic in \pkg{methods}.

      \item \code{iconv(to = "ASCII//TRANSLIT")} is emulated using
      substitution on platforms which do not support it (notably Alpine
      Linux).  This should give a human-readable conversion in ASCII on
      all platforms (rather than \code{NA_character_}).

      \item \code{trans3d()} gains options \code{continuous} and
      \code{verbose} addressing the problem of possible \dQuote{wrap